CHANGES
*******

0.11 (unreleased)
=================

- Nothing changed yet.


0.10 (2015-04-09)
=================

- Server-side templating language support: there is now a ``template``
  argument for the ``html`` directive (and ``view`` and ``json``).
  You need to use a plugin to add particular template languages to
  your project, such as ``more.chameleon`` and ``more.jinja2``, but
  you can also add your own.

  See http://morepath.readthedocs.org/en/latest/templates.html

- Add a new "A Review of the Web" document to the docs to show how
  Morepath fits within the web.

  http://morepath.readthedocs.org/en/latest/web.html

- The publisher does not respond to a ``None`` render function
  anymore. Instead, the ``view`` directive now uses a default
  ``render_view`` if ``None`` is configured. This simplifies the
  publisher guaranteeing a ``render`` function always exists.

  Fixes https://github.com/morepath/morepath/issues/283

- Introduce a ``request.resolve_path`` method that allows you to resolve
  paths to objects programmatically.

- Modify ``setup.py`` to use ``io.open`` instead of ``open`` to
  include the README and the CHANGELOG and hardcode UTF-8 so it works
  on all versions of Python with all default encodings.

- Various documentation fixes.

0.9 (2014-11-25)
================

- **Breaking change**. In previous releases of Morepath, Morepath did
  not include the full hostname in generated links (so ``/a`` instead
  of ``http://example.com/a``). Morepath 0.9 does include the full
  hostname in generated links by default. This to support the
  non-browser client use case better. In the previous system without
  fully qualified URLs, client code needs to manually add the base of
  links itself in order to be able to access them. That makes client
  code more complicated than it should be. To make writing such client
  code as easy as possible Morepath now generates complete URLs.

  This should not break any code, though it can break tests that rely